Implement API to set the block state of a judge node.
